# wikain

./: .gitignore  CLAUDE.md  components.json  docker-compose.yml  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
.claude/: settings.json
.claude/rules/: 00-overview.md  01-architecture.md  02-solid.md  03-composition.md  04-component-principles.md  05-pragmatism.md  06-tdd.md  07-stack.md  08-comments.md  09-structure.md
data/: NAWL_1.2.csv  american_oxford_3000_by_cefr_level.csv  american_oxford_5000_by_cefr_level.csv  lemma_freq_zipf.csv  merged_oxford_a2c1_zipf_with_senses.csv  oxford_3000_5000.csv  oxford_multisense_catalog.csv
docs/: AMMENDMENT.md  BUILD.md  CLOZE_FIT_RUBRIC.md  GENERATION_RULES.md  PRD.md  RESEARCH.md  lexical-item.contract.json
drizzle/: 0000_init.sql  0002_purple_doomsday.sql
drizzle/development/: 0003_married_mindworm.sql  0004_groovy_sebastian_shaw.sql  0005_lovely_vampiro.sql  0006_fine_fabian_cortez.sql  0008_medical_taskmaster.sql  (+5 more)
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
python/: .dockerignore  Dockerfile  pyproject.toml
python/scripts/: backfill_cued_synonyms.py
python/src/wikain/judge/: config.py  deepseek.py  deepseek_test.py  rubric.py  verdict.py
python/src/wikain/nlp/: engine.py  engine_test.py  tokens.py
python/src/wikain/pipeline/: cli.py  combine.py  constants.py  generate.py  generate_test.py  pipeline_test.py  stage_a.py  stage_a_test.py  stage_b.py  stage_b_test.py  stage_c.py  stage_c_test.py  types.py  types_test.py
python/src/wikain/service/: main.py  main_test.py
spec/: 00-overview-invariants.md  01-state-machine.md  02-fsrs-rating.md  03-card-tiers.md  04-rule-layer.md  05-verdict-memo.md  06-cloud-judge.md  07-edit-resolution.md  08-failure-path.md  09-seeding-placement.md  10-counter-goal.md  11-end-to-end-loop.md  12-data-model.md  13-cloze-fit-set.md  14-mini-sessions.md  15-cued-synonym-soft-bounce.md
(+446 files in other folders)
