[project]
name = "wikain"
version = "0.0.0"
description = "Wikain language services — the shared spaCy NLP engine, the DeepSeek judge, and the offline content-generation pipeline."
requires-python = ">=3.13"
dependencies = [
    "spacy>=3.8.0",
    "en-core-web-sm",
    # spacy.cli imports click at package import; typer>=0.26 no longer pulls it in transitively.
    "click>=8.1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.8.0",
]

[project.scripts]
wikain-pipeline = "wikain.pipeline.cli:main"

# The model is not on PyPI; pin the wheel the spaCy release publishes on GitHub.
[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wikain"]

[tool.ruff]
src = ["src"]

# A rule gate, not a formatter — mirroring eslint.config.js, which carries no style rules and no
# Prettier. `E` (pycodestyle: line length, whitespace) is deliberately NOT selected; the ambiguous-
# unicode rules are off because the prose intentionally uses §, en/em dashes and arrows, as the
# specs and rule tree do.
[tool.ruff.lint]
select = ["F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["wikain"]

# spaCy ships no complete stubs; its Doc/Token attributes are dynamic.
[[tool.mypy.overrides]]
module = ["spacy.*", "en_core_web_sm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
# TDD-4: tests sit beside the module they exercise (foo.py + foo_test.py), not in a tests/ root.
testpaths = ["src/wikain"]
python_files = ["*_test.py"]
asyncio_mode = "auto"
